--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     // https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api
     implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.1.0'
 
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
+    implementation 'org.springframework.boot:spring-boot-devtools'
+
     // Optional: Spring Boot Configuration Processor (for @ConfigurationProperties support)
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 }
