--- a/src/main/resources/applicationdev.properties
+++ b/src/main/resources/applicationdev.properties
@@ -1,6 +1,6 @@
 # JPA 설정
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 # Setting for MariaDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -24,3 +24,9 @@ server.servlet.encoding.force=true
 
 spring.security.user.name=admin
 spring.security.user.password=pass
+
+logging.config=classpath:config/logback-spring.xml
+
+# 수정사항 생길시 자동 재빌드를 위한 코드
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
